# fftwArr

./: .gitignore  CMakeLists.txt  INSTALL  README.md  changes.md  fftw3mpi.pc.in
example/: CMakeLists.txt  README.md  main.cpp  plot.py
example/array3d/: CMakeLists.txt  main.cpp  plot.py
example/basic-real_array_3d/: CMakeLists.txt  README.md  main.cpp
example/r2c2d/: README.md  main.cpp  plot.py
example/test-binary_operations/: CMakeLists.txt  main.cpp
example/test-error_binary_operations/: CMakeLists.txt  main.cpp
example/test-file_output/: CMakeLists.txt  main.cpp
example/test-ostream/: CMakeLists.txt  main.cpp
fftw_arr/: CMakeLists.txt  array3d.cpp  array3d.hpp  r2c_2d.cpp  r2c_2d.hpp  r2c_array.cpp  r2c_array.hpp
pkgconfig/: fftw3mpi.pc
src/: CMakeLists.txt  array2d.cpp  array2d.hpp  array3d.cpp  array3d.hpp  arrays.hpp  fftw_arr.hpp  fftw_arr.pc.in
unittest/: README.md
unittest/test-aliases/: CMakeLists.txt  main.cpp
unittest/test-binary_operations/: CMakeLists.txt  main.cpp
unittest/test-error_binary_operations/: CMakeLists.txt  main.cpp
unittest/test-file_output/: CMakeLists.txt  main.cpp
unittest/test-ostream/: CMakeLists.txt  main.cpp
unittest/utils/: CMakeLists.txt  fftw_arr_testing_utils.pc.in  utils.cpp  utils.hpp
